
FIND_PACKAGE( CTL REQUIRED )

INCLUDE_DIRECTORIES( ${CTL_INCLUDE_DIR} ${OPENEXR_INCLUDE_DIR} )

SET( LIBRARIES ${CTL_LIBRARIES} )

IF(NOT WIN32)
       SET( LIBRARIES ${LIBRARIES} pthread )
ENDIF(NOT WIN32)

ADD_EXECUTABLE( ctlparser.exe main.cpp )
TARGET_LINK_LIBRARIES( ctlparser.exe ${LIBRARIES} )
