
# if(COMMAND cmake_policy)
#   cmake_policy(SET CMP0003 NEW)
# endif(COMMAND cmake_policy)

FIND_PACKAGE( OpenEXR REQUIRED )
FIND_PACKAGE( CTL REQUIRED )


INCLUDE_DIRECTORIES( ${CTL_INCLUDE_DIR} ${OPENEXR_INCLUDE_DIR} )

IF(WIN32)
ADD_DEFINITIONS( "-DOPENEXR_DLL" )
SET( LIBRARIES 
  ${CTL_LIBRARIES} 
  ${OPENEXR_LIBRARIES} 
)
ELSE(WIN32)
SET( LIBRARIES 
  ${CTL_LIBRARIES} 
  ${OPENEXR_LIBRARIES} 
  pthread 
)
ENDIF()


MESSAGE( STATUS "LIBRARIES=${LIBRARIES}" )

  EXECUTE_PROCESS( COMMAND xgettext -s -c++ -k_ main.cpp -o po/messages.pot 
    WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
    RESULT_VARIABLE ok_xgettext
    ERROR_VARIABLE  error_xgettext)


ADD_EXECUTABLE( ctlparser main.cpp )
TARGET_LINK_LIBRARIES( ctlparser ${LIBRARIES} )
